Implement security enhancements and error handling in Comic Converter
- Added SecurityUtils class for centralized security functions.
- Integrated file size and extension validation in ComicConverter.
- Implemented global error handling for unhandled errors and promise rejections.
- Enhanced file signature validation for AZW3 and other formats.
- Introduced memory usage tracking and rate limiting for file processing.
- Updated HTML to include Content Security Policy and other security headers.
- Refactored error handling to sanitize error messages before display.
- Removed deprecated test.html file and related test functions.
- Bumped version to 2.1.0 and updated author and license information in package.json.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-comic-converter",
-  "version": "1.0.0",
+  "version": "2.1.0",
   "description": "A web-based application for converting DRM-free Amazon comic book files (AZW3) to CBZ format",
   "main": "index.html",
   "scripts": {
@@ -18,8 +18,8 @@
     "comic-book",
     "ebook"
   ],
-  "author": "Comic Converter Team",
-  "license": "MIT",
+  "author": "eD! Thomas",
+  "license": "LGPL-3.0-or-later",
   "repository": {
     "type": "git",
     "url": "https://github.com/your-username/awesome-comic-converter.git"
